# interpreter

./: .gitignore  CMakeLists.txt  README.md  TODO.md  _LICENSE  cmake.md
samples/: main.flx
samples/games/: 2048.flx  2048_terminal.flx  space_invaders.flx  tetris.flx
samples/tester/: test_suite.flx
samples/uncategorized/: fix_rest_behaviour.flx  game_2048.flx  game_2048_graphics.flx  problems.flx
src/: Flexa.sln  Interpreter.vcxproj  Interpreter.vcxproj.filters  ast.cpp  ast.hpp  bytecode.cpp  bytecode.hpp  compiler.cpp  compiler.hpp  constants.cpp  constants.hpp  dependency_resolver.cpp  dependency_resolver.hpp  exception_handler.cpp  exception_handler.hpp  flx_interpreter.cpp  flx_interpreter.hpp  flx_repl.cpp  flx_repl.hpp  flx_utils.cpp  flx_utils.hpp  gc.cpp  gc.hpp  gcobject.cpp  gcobject.hpp  graphics_utils.cpp  graphics_utils.hpp  graphics_utils_niy.cpp  graphics_utils_niy.hpp  graphics_utils_win.cpp  graphics_utils_win.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  logging.cpp  logging.hpp  main.cpp  md_builtin.cpp  md_builtin.hpp  (+44 more)
tests/: main.flx  old_manual_tests.flx  old_tests.flx  test_suite.flx  utils.flx
tests/arrays/: _null.flx  decl_array.flx  diff_subtypes.flx  dimension.flx  identifier_check.flx  is_not_pointer.flx  pos_assign.flx  pos_assign_multi.flx  pos_read.flx  reassign.flx  reassign_multi.flx  reassign_multi_undecl.flx  reassign_multi_undef.flx  reassign_undecl.flx  reassign_undef.flx
tests/builtins/: is_special_type.flx
tests/functions/: _default.flx  declaration_test.flx  exprfun.flx  function_struct_pointer.flx  (+1 more)
(+37 files in other folders)
